fix: Add missing border radius to code elements.

--- a/themes/yeldirium/source-raw/scss/generic/_text.scss
+++ b/themes/yeldirium/source-raw/scss/generic/_text.scss
@@ -31,4 +31,6 @@ code {
   background-color: $font-background-code;
 
   font-size: 0.9rem;
+
+  border-radius: 3px;
 }
